feat: Adding checkout endpoint
